[package]
name = "polling-test"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
async-compression = { version = "0.4.14", features = ["tokio", "zstd"] }
env_logger = { version = "0.11.5", default-features = false, features = ["color", "humantime"] }
log = { version = "0.4.22", features = ["max_level_debug", "release_max_level_error"] }
rand = "0.8.5"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
